; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_string_resize.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_string_resize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i64)* @string_resize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @string_resize(i8** %0, i64 %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8**, i8*** %3, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = add i64 %8, 1
  %10 = call i64 @lodepng_realloc(i8* %7, i64 %9)
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i8*, i8** %5, align 8
  %16 = load i64, i64* %4, align 8
  %17 = getelementptr inbounds i8, i8* %15, i64 %16
  store i8 0, i8* %17, align 1
  %18 = load i8*, i8** %5, align 8
  %19 = load i8**, i8*** %3, align 8
  store i8* %18, i8** %19, align 8
  br label %20

20:                                               ; preds = %14, %2
  %21 = load i8*, i8** %5, align 8
  %22 = icmp ne i8* %21, null
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local i64 @lodepng_realloc(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
